--- a/dev/www/index.html
+++ b/dev/www/index.html
@@ -11,10 +11,12 @@
   <script src="./js/materialize.min.js" charset="utf-8"></script>
 </head>
 <body>
-
+<p>
+  hello+
+</p>
   <app></app>
 
   <script src="./js/bundle.js"></script>
-  
+
 </body>
 </html>
